# django-htmx-playground

./: .gitignore  pyproject.toml
config/: settings.py  urls.py
movies/: forms.py  urls.py  views.py
movies/migrations/: 0001_initial.py
movies/templates/: base.html
movies/templates/registration/: login.html  register.html  registration.html
requirements/: requirements.txt
